[package]
name = "cue_lib"
description = "cuesheet library"
keywords = ["cue", "cuesheet", "file-format", "library"]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
alloc = []

[dependencies]
