[package]
name = "cue_lib"
description = "cuesheet library"
keywords = ["cue", "cuesheet", "file-format", "library"]
license = "Apache-2.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
alloc = []
metadata = []
serde = ["alloc", "dep:serde"]

[dependencies]
serde = { version = "1", default-features = false, optional = true }
